environments/gloo-mesh-core/singlecluster/clusterservices-config/base/error/error-main-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: error-main-vs
  namespace: gloo-mesh
spec:
  hosts:
  - "error.gmc.glooplatform.com"
  gateways:
  - istio-gateways/https-gateway
  - istio-gateways/bogus-gateway
  http:
  - name: error1
    match:
    - uri:
        exact: /error1
    delegate:
      name: error1-delegate-vs
      namespace: gloo-mesh
