environments/gloo-mesh-core/singlecluster/clusterservices-config/base/error/error1-delegate-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: error1-delegate-vs
  namespace: gloo-mesh
spec:
  http:
  - name: error1
    match:
    - uri:
        exact: /error1
    headers:
      response:
        set:
          content-type: "text/html"
    directResponse:
      status: 200
      body:
        string: |
          This is an error message from error1
